--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,51 +1,146 @@
 @import url(https://fonts.googleapis.com/css?family=Poiret+One);
 
 body {
-  background-color: #50423F;
+  background-color: #a29bfe;
 }
 
 .container {
-    display: block;
-    color: #bdbdbd;
-    margin: 40px auto;
-    max-width: 258px;
+    margin: 40px auto 0;
+    max-width: 350px;
     width: 100%;
     text-align: center;
-    font-size: 16px;
     box-sizing: content-box;
     font-family: 'Poiret One';
     font-size: 22px;
 }
 
-h1{
-  text-transform: uppercase;
-  font-size: 1.8em;
-  line-height: 50px;
-  background: #bdbdbd;
-  color: #212121;
-  text-align: center;
-  margin: 0 30px 10px;
-  position: relative;
-  text-shadow: -4px 3px 0 #827E7E;
+section {
+  margin: 25px 0;
 }
 
-h1:after, h1:before {
+/*
+* Label One Design
+*/
+.label-one {
+  background: #fff;
+  font-size: 1.8em;
+  line-height: 1.8em;
+  position: relative;
+  box-shadow: 0 9px 17px 0px rgba(0,0,0,.13);
+}
+
+.label-one:before, .label-one:after {
     content: '';
     position: absolute;
     width: 0;
     height: 0;
     top: -5px;
-    border-width: 25px 10px;
+    border-width: 30px;
     border-style: solid;
 }
 
-h1:before {
-    left: -20px;
-    border-color: #bdbdbd #bdbdbd #bdbdbd transparent;
+.label-one:before {
+    left: -50px;
+    border-color: #fff #fff #fff transparent;
 }
 
-h1:after {
-    right: -20px;
-    border-color: #bdbdbd transparent #bdbdbd #bdbdbd;
+.label-one:after {
+    right: -50px;
+    border-color: #fff transparent #fff #fff;
 }
 
+/*
+* Label Two Design
+*/
+.label-two {
+  background: #fff;
+  font-size: 1.8em;
+  line-height: 1.8em;
+  position: relative;
+  box-shadow: 0 9px 17px 0px rgba(0,0,0,.13);
+}
+
+.label-two:before, .label-two:after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    bottom: -5px;
+    border-width: 30px;
+    border-style: solid;
+}
+
+.label-two:before {
+    left: -50px;
+    border-color: #fff #fff #fff transparent;
+}
+
+.label-two:after {
+    right: -50px;
+    border-color: #fff transparent #fff #fff ;
+}
+
+/*
+* Label Three Design
+*/
+.label-three {
+  background: #fff;
+  font-size: 1.8em;
+  line-height: 1.8em;
+  position: relative;
+  box-shadow: 0 9px 17px 0px rgba(0,0,0,.13);
+}
+
+.label-three:after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-width: 35.5px;
+    border-style: solid;
+    border-color: #fff transparent #fff #fff;
+    right: -71px;
+}
+
+.label-four {
+  background: #fff;
+  font-size: 1.8em;
+  line-height: 1.8em;
+  position: relative;
+  box-shadow: 0 9px 17px 0px rgba(0,0,0,.13);
+}
+
+.label-four:after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-width: 35.5px;
+    border-style: solid;
+    border-color: #fff #fff #fff transparent;
+    left: -71px;
+}
+
+.label-five {
+  width: 80px;
+  height: auto;
+  margin: 0 auto;
+  position: relative;
+  line-height: 40px;
+  font-size: 35px;
+  text-align: center;
+  background: #fff;
+  box-shadow: 0 9px 17px 0px rgba(0,0,0,.13);
+}
+
+.label-five:after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-width: 40px;
+  border-style: solid;
+  left: 0;
+  bottom: -80px;
+  border-color: #fff #fff transparent #fff;
+}
